# ChangeLog for x11-misc/xorg-edit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Jul 2007; David Shakaryan <omp@gentoo.org> xorg-edit-07.06.15.ebuild:
  Use $PN in SRC_URI.

  07 Jul 2007; Mike Pagano <mpagano@gmail.com> ChangeLog:
  Remove old version

  07 Jul 2007; Mike Pagano <mpagano@gmail.com> +xorg-edit-07.06.15.ebuild,
  +files/xorg-edit-07.06.15-makefile.patch:
  Version bump

  12 Aug 2006; Cedric Krier <ced@ced.homedns.org>
  +xorg-edit-06.08.02.ebuild, +files/xorg-edit-06.08.02-makefile.patch:
  Version bump

  30 Jul 2006; Cedric Krier <ced@ced.homedns.org>
  +xorg-edit-06.07.30.ebuild, +files/xorg-edit-06.07.30-makefile.patch:
  version bump

  14 Jul 2006; Josu López Fernández <zamorate@zamorate.net> ChangeLog:
  Added ~amd64 and ~ppc keywords. Respect the correct CXX

  12 Jul 2006; Cedric Krier <ced@ced.homedns.org> ChangeLog:
  New Ebuild for bug 139850 thanks to Priyantha Bleeker and Jakub Moc
