@@ -1,5 +1,5 @@
 AUX xorg-edit-07.06.15-makefile.patch 646 RMD160 9943d4f2d73cf2f3b0830486689ada35a04e82d1 SHA1 43e520060b7b85bb7ecb1b69a3a56f3306901f76 SHA256 9af79161bd68fc407ce293541d833aa8f8f46f6937a510f9154cdd187f127680
 DIST xorg-edit_07.06.15_src.tar.bz2 95905 RMD160 b84bd2d3bb9c498035e5a493919500eedc4e4d4f SHA1 60f543c4da5e6d5c97b697f0086ec5265a6bb73f SHA256 87f09e73416550a4cb33d456f0da3fd83f5d20ba67b55fa457bf1ffcf1641d46
-EBUILD xorg-edit-07.06.15.ebuild 663 RMD160 ae9cd69c20767a25a01526b849e33c4ae2e77153 SHA1 dd163da86459b5b9906314de63dafef38a03c3c9 SHA256 723547414cdf247e22f11664d2f09b9a73b45786af58a89d533bf27bca088599
-MISC ChangeLog 972 RMD160 9be5962463dd3e312f3c2bdb681ae498a2e0fdde SHA1 e6d29d0bf7c615f32270fef3ca4c019a4ef2fc85 SHA256 d21a3252ca07670ee8d19375bdce2e9fb5e0fd7287232ed5ff2f7a90c3a997e5
+EBUILD xorg-edit-07.06.15.ebuild 690 RMD160 10e9d640f67ea0602c175b8e5c556c6d6a287024 SHA1 b8493d409d7de2ab49603a48de6813c7acd44132 SHA256 b760b9352a9c3fc83fb88a8e71814c67400e33a180574044f6829fa8184636c9
+MISC ChangeLog 1065 RMD160 3bc9976858979a136d75c6a0bb52235e0986ecb8 SHA1 23f7448b631487dd147f571f6424927d248b4999 SHA256 7cdc8f52ebacea3c321d11d615c53af3bc439fdf246418bfac085088d9b9a0d0
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
