@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xorg-edit
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  13 Jan 2008; Jakub Moc <jakub@gentoo.org> xorg-edit-07.06.15.ebuild:
+  Fix wxGTK handling
 
   12 Jul 2007; David Shakaryan <omp@gentoo.org> xorg-edit-07.06.15.ebuild:
   Use $PN in SRC_URI.
